docs/0.16/_sources/modeling/gallery/spectral/plot_super_exp_cutoff_powerlaw_3fgl.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_3fgl.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_3fgl.py:


.. _super-exp-cutoff-powerlaw-3fgl-spectral-model:

Super Exponential Cutoff Power Law Model used for 3FGL
======================================================

This model parametrises super exponential cutoff power-law model spectrum used for 3FGL.

It is defined by the following equation:

.. math::
    \phi(E) = \phi_0 \cdot \left(\frac{E}{E_0}\right)^{-\Gamma_1}
              \exp \left( \left(\frac{E_0}{E_{C}} \right)^{\Gamma_2} -
                          \left(\frac{E}{E_{C}} \right)^{\Gamma_2}
                          \right)

Example plot
------------
Here is an example plot of the model:


.. code-block:: default


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import (
        Models,
        SkyModel,
        SuperExpCutoffPowerLaw3FGLSpectralModel,
    )

    energy_range = [0.1, 100] * u.TeV
    model = SuperExpCutoffPowerLaw3FGLSpectralModel(
        index_1=1,
        index_2=2,
        amplitude="1e-12 TeV-1 s-1 cm-2",
        reference="1 TeV",
        ecut="10 TeV",
    )
    model.plot(energy_range)
    plt.grid(which="both")
    plt.ylim(1e-24, 1e-10)




.. image:: /modeling/gallery/spectral/images/sphx_glr_plot_super_exp_cutoff_powerlaw_3fgl_001.png
    :class: sphx-glr-single-img





YAML representation
-------------------
Here is an example YAML file using the model:


.. code-block:: default


    model = SkyModel(spectral_model=model, name="super-exp-cutoff-power-law-3fgl-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: super-exp-cutoff-power-law-3fgl-model
        type: SkyModel
        spectral:
            type: SuperExpCutoffPowerLaw3FGLSpectralModel
            parameters:
            - {name: amplitude, value: 1.0e-12, unit: cm-2 s-1 TeV-1, min: .nan, max: .nan,
                frozen: false}
            - {name: reference, value: 1.0, unit: TeV, min: .nan, max: .nan, frozen: true}
            - {name: ecut, value: 10.0, unit: TeV, min: .nan, max: .nan, frozen: false}
            - {name: index_1, value: 1.0, unit: '', min: .nan, max: .nan, frozen: false}
            - {name: index_2, value: 2.0, unit: '', min: .nan, max: .nan, frozen: false}






.. _sphx_glr_download_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_3fgl.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_super_exp_cutoff_powerlaw_3fgl.py <plot_super_exp_cutoff_powerlaw_3fgl.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_super_exp_cutoff_powerlaw_3fgl.ipynb <plot_super_exp_cutoff_powerlaw_3fgl.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
