docs/0.19/_sources/modeling/gallery/spectral/plot_super_exp_cutoff_powerlaw_3fgl.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "modeling/gallery/spectral/plot_super_exp_cutoff_powerlaw_3fgl.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_3fgl.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_3fgl.py:


.. _super-exp-cutoff-powerlaw-3fgl-spectral-model:

Super exponential cutoff power law model used for 3FGL
======================================================

This model parametrises super exponential cutoff power-law model spectrum used for 3FGL.

It is defined by the following equation:

.. math::
    \phi(E) = \phi_0 \cdot \left(\frac{E}{E_0}\right)^{-\Gamma_1}
              \exp \left( \left(\frac{E_0}{E_{C}} \right)^{\Gamma_2} -
                          \left(\frac{E}{E_{C}} \right)^{\Gamma_2}
                          \right)

.. GENERATED FROM PYTHON SOURCE LINES 19-22

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 22-43

.. code-block:: default


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import (
        Models,
        SkyModel,
        SuperExpCutoffPowerLaw3FGLSpectralModel,
    )

    energy_bounds = [0.1, 100] * u.TeV
    model = SuperExpCutoffPowerLaw3FGLSpectralModel(
        index_1=1,
        index_2=2,
        amplitude="1e-12 TeV-1 s-1 cm-2",
        reference="1 TeV",
        ecut="10 TeV",
    )
    model.plot(energy_bounds)
    plt.grid(which="both")
    plt.ylim(1e-24, 1e-10)




.. image-sg:: /modeling/gallery/spectral/images/sphx_glr_plot_super_exp_cutoff_powerlaw_3fgl_001.png
   :alt: plot super exp cutoff powerlaw 3fgl
   :srcset: /modeling/gallery/spectral/images/sphx_glr_plot_super_exp_cutoff_powerlaw_3fgl_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 44-47

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 47-52

.. code-block:: default


    model = SkyModel(spectral_model=model, name="super-exp-cutoff-power-law-3fgl-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: super-exp-cutoff-power-law-3fgl-model
        type: SkyModel
        spectral:
            type: SuperExpCutoffPowerLaw3FGLSpectralModel
            parameters:
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
            -   name: ecut
                value: 10.0
                unit: TeV
            -   name: index_1
                value: 1.0
            -   name: index_2
                value: 2.0






.. _sphx_glr_download_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_3fgl.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_super_exp_cutoff_powerlaw_3fgl.py <plot_super_exp_cutoff_powerlaw_3fgl.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_super_exp_cutoff_powerlaw_3fgl.ipynb <plot_super_exp_cutoff_powerlaw_3fgl.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
